{
  "version": 4,
  "terraform_version": "1.9.6",
  "serial": 136,
  "lineage": "8ccc7df4-5999-a2f9-2da9-148f2c0edbf4",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "project_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:851725296097:loadbalancer/app/project-alb/bedad5eb4e464b32",
            "arn_suffix": "app/project-alb/bedad5eb4e464b32",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "project-alb-1182808663.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:851725296097:loadbalancer/app/project-alb/bedad5eb4e464b32",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "project-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-082beac23b3858099"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03c61951de4784d4e"
              },
              {
                "subnet_id": "subnet-09ae773ea0355fbdf"
              }
            ],
            "subnets": [
              "subnet-03c61951de4784d4e",
              "subnet-09ae773ea0355fbdf"
            ],
            "tags": {
              "Name": "project-lb"
            },
            "tags_all": {
              "Name": "project-lb"
            },
            "vpc_id": "vpc-095771e7a45140bc6",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "module.networking.aws_subnet.project_public_subnets",
            "module.networking.aws_vpc.project_vpc_us_west_2",
            "module.security_group.aws_security_group.ec2_sg_ssh_http"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "project_lb_https_listner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:851725296097:listener/app/project-alb/bedad5eb4e464b32/569c369c955d6541",
            "certificate_arn": "arn:aws:acm:ap-south-1:851725296097:certificate/895b1bed-ce62-4ea4-8d87-890c1bab1377",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:851725296097:targetgroup/jenkins-lb-target-group/484001e3dc67b9be",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:851725296097:listener/app/project-alb/bedad5eb4e464b32/569c369c955d6541",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:851725296097:loadbalancer/app/project-alb/bedad5eb4e464b32",
            "mutual_authentication": [
              {
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.project_lb",
            "module.aws_ceritification_manager.aws_acm_certificate.project_acm_arn",
            "module.lb_target_group.aws_lb_target_group.project_lb_target_group",
            "module.networking.aws_subnet.project_public_subnets",
            "module.networking.aws_vpc.project_vpc_us_west_2",
            "module.security_group.aws_security_group.ec2_sg_ssh_http"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "project_lb_listner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:851725296097:listener/app/project-alb/bedad5eb4e464b32/762636ce9526d455",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:851725296097:targetgroup/jenkins-lb-target-group/484001e3dc67b9be",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:851725296097:listener/app/project-alb/bedad5eb4e464b32/762636ce9526d455",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:851725296097:loadbalancer/app/project-alb/bedad5eb4e464b32",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.project_lb",
            "module.lb_target_group.aws_lb_target_group.project_lb_target_group",
            "module.networking.aws_subnet.project_public_subnets",
            "module.networking.aws_vpc.project_vpc_us_west_2",
            "module.security_group.aws_security_group.ec2_sg_ssh_http"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "project_lb_target_group_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:851725296097:targetgroup/jenkins-lb-target-group/484001e3dc67b9be-20240926143110561000000005",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:851725296097:targetgroup/jenkins-lb-target-group/484001e3dc67b9be",
            "target_id": "i-0bb9fa6dac4fc7dad"
          },
          "dependencies": [
            "module.jenkins.aws_instance.jenkins_ec2_instance_ip",
            "module.lb_target_group.aws_lb_target_group.project_lb_target_group",
            "module.networking.aws_subnet.project_public_subnets",
            "module.networking.aws_vpc.project_vpc_us_west_2",
            "module.security_group.aws_security_group.ec2_jenkins_port_8080",
            "module.security_group.aws_security_group.ec2_sg_ssh_http"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins",
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_ec2_instance_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08718895af4dfa033",
            "arn": "arn:aws:ec2:ap-south-1:851725296097:instance/i-0bb9fa6dac4fc7dad",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bb9fa6dac4fc7dad",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e122d01a55630c00",
            "private_dns": "ip-26-0-1-142.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "26.0.1.142",
            "public_ip": "65.2.169.74",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f91939f8f3952074",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03c61951de4784d4e",
            "tags": {
              "Name": "Jenkins:Linux EC2"
            },
            "tags_all": {
              "Name": "Jenkins:Linux EC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-082beac23b3858099",
              "sg-0fd38915f255d6162"
            ]
          },
          "dependencies": [
            "module.networking.aws_subnet.project_public_subnets",
            "module.networking.aws_vpc.project_vpc_us_west_2",
            "module.security_group.aws_security_group.ec2_jenkins_port_8080",
            "module.security_group.aws_security_group.ec2_sg_ssh_http"
          ]
        }
      ]
    },
    {
      "module": "module.lb_target_group",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "project_lb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:851725296097:targetgroup/jenkins-lb-target-group/484001e3dc67b9be",
            "arn_suffix": "targetgroup/jenkins-lb-target-group/484001e3dc67b9be",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 6,
                "interval": 5,
                "matcher": "200",
                "path": "/login",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 2,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:851725296097:targetgroup/jenkins-lb-target-group/484001e3dc67b9be",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:851725296097:loadbalancer/app/project-alb/bedad5eb4e464b32"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "jenkins-lb-target-group",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-095771e7a45140bc6"
          },
          "dependencies": [
            "module.networking.aws_vpc.project_vpc_us_west_2"
          ]
        }
      ]
    },
    {
      "module": "module.lb_target_group",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "project_lb_target_group_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:851725296097:targetgroup/jenkins-lb-target-group/484001e3dc67b9be-20240926143110782100000006",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:851725296097:targetgroup/jenkins-lb-target-group/484001e3dc67b9be",
            "target_id": "i-0bb9fa6dac4fc7dad"
          },
          "dependencies": [
            "module.jenkins.aws_instance.jenkins_ec2_instance_ip",
            "module.lb_target_group.aws_lb_target_group.project_lb_target_group",
            "module.networking.aws_subnet.project_public_subnets",
            "module.networking.aws_vpc.project_vpc_us_west_2",
            "module.security_group.aws_security_group.ec2_jenkins_port_8080",
            "module.security_group.aws_security_group.ec2_sg_ssh_http"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "project_public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:851725296097:internet-gateway/igw-0da53caf0d845c253",
            "id": "igw-0da53caf0d845c253",
            "owner_id": "851725296097",
            "tags": {
              "Name": "project-1-igw"
            },
            "tags_all": {
              "Name": "project-1-igw"
            },
            "vpc_id": "vpc-095771e7a45140bc6"
          },
          "dependencies": [
            "module.networking.aws_vpc.project_vpc_us_west_2"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "project_private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:851725296097:route-table/rtb-07ff666a03c8fdbd2",
            "id": "rtb-07ff666a03c8fdbd2",
            "owner_id": "851725296097",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "project-1-private-rt"
            },
            "tags_all": {
              "Name": "project-1-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-095771e7a45140bc6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.project_vpc_us_west_2"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "project_public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:851725296097:route-table/rtb-0e10aabd82ee48ed6",
            "id": "rtb-0e10aabd82ee48ed6",
            "owner_id": "851725296097",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0da53caf0d845c253",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "project-1-public-rt"
            },
            "tags_all": {
              "Name": "project-1-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-095771e7a45140bc6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.project_public_internet_gateway",
            "module.networking.aws_vpc.project_vpc_us_west_2"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "project_private_rt_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-059ee0ad7157e3d6c",
            "route_table_id": "rtb-07ff666a03c8fdbd2",
            "subnet_id": "subnet-0e5cc1fde5cc72488"
          },
          "dependencies": [
            "module.networking.aws_route_table.project_private_subnets",
            "module.networking.aws_subnet.project_private_subnets",
            "module.networking.aws_vpc.project_vpc_us_west_2"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-041bcf3794bd3721a",
            "route_table_id": "rtb-07ff666a03c8fdbd2",
            "subnet_id": "subnet-01f4fc4da36612c9c"
          },
          "dependencies": [
            "module.networking.aws_route_table.project_private_subnets",
            "module.networking.aws_subnet.project_private_subnets",
            "module.networking.aws_vpc.project_vpc_us_west_2"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "project_public_rt_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-074a891044e9aaf16",
            "route_table_id": "rtb-0e10aabd82ee48ed6",
            "subnet_id": "subnet-03c61951de4784d4e"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.project_public_internet_gateway",
            "module.networking.aws_route_table.project_public_route_table",
            "module.networking.aws_subnet.project_public_subnets",
            "module.networking.aws_vpc.project_vpc_us_west_2"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-026178c88fa99308c",
            "route_table_id": "rtb-0e10aabd82ee48ed6",
            "subnet_id": "subnet-09ae773ea0355fbdf"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.project_public_internet_gateway",
            "module.networking.aws_route_table.project_public_route_table",
            "module.networking.aws_subnet.project_public_subnets",
            "module.networking.aws_vpc.project_vpc_us_west_2"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "project_private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:851725296097:subnet/subnet-0e5cc1fde5cc72488",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "26.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e5cc1fde5cc72488",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725296097",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project-private-subnet-1"
            },
            "tags_all": {
              "Name": "project-private-subnet-1"
            },
            "vpc_id": "vpc-095771e7a45140bc6"
          },
          "dependencies": [
            "module.networking.aws_vpc.project_vpc_us_west_2"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:851725296097:subnet/subnet-01f4fc4da36612c9c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "26.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01f4fc4da36612c9c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725296097",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project-private-subnet-2"
            },
            "tags_all": {
              "Name": "project-private-subnet-2"
            },
            "vpc_id": "vpc-095771e7a45140bc6"
          },
          "dependencies": [
            "module.networking.aws_vpc.project_vpc_us_west_2"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "project_public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:851725296097:subnet/subnet-03c61951de4784d4e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "26.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03c61951de4784d4e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725296097",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project-public-subnet-1"
            },
            "tags_all": {
              "Name": "project-public-subnet-1"
            },
            "vpc_id": "vpc-095771e7a45140bc6"
          },
          "dependencies": [
            "module.networking.aws_vpc.project_vpc_us_west_2"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:851725296097:subnet/subnet-09ae773ea0355fbdf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "26.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09ae773ea0355fbdf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725296097",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project-public-subnet-2"
            },
            "tags_all": {
              "Name": "project-public-subnet-2"
            },
            "vpc_id": "vpc-095771e7a45140bc6"
          },
          "dependencies": [
            "module.networking.aws_vpc.project_vpc_us_west_2"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "project_vpc_us_west_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:851725296097:vpc/vpc-095771e7a45140bc6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "26.0.0.0/16",
            "default_network_acl_id": "acl-0a1618439f8483e84",
            "default_route_table_id": "rtb-0015865b8c1094a0b",
            "default_security_group_id": "sg-0477e3f88f3dea866",
            "dhcp_options_id": "dopt-06a5e95fe3be3d603",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-095771e7a45140bc6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0015865b8c1094a0b",
            "owner_id": "851725296097",
            "tags": {
              "Name": "project-vpc-1"
            },
            "tags_all": {
              "Name": "project-vpc-1"
            }
          }
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_jenkins_port_8080",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:851725296097:security-group/sg-0fd38915f255d6162",
            "description": "Enable the Port 8080 for jenkins",
            "egress": [],
            "id": "sg-0fd38915f255d6162",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow 8080 port to access jenkins",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "Allow port 8080 for jenkins",
            "name_prefix": "",
            "owner_id": "851725296097",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Security Groups to allow Jenkins(8080)"
            },
            "tags_all": {
              "Name": "Security Groups to allow Jenkins(8080)"
            },
            "timeouts": null,
            "vpc_id": "vpc-095771e7a45140bc6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.project_vpc_us_west_2"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg_ssh_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:851725296097:security-group/sg-082beac23b3858099",
            "description": "Enable the Port 22(SSH) \u0026 Port 80(http)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outgoing request",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-082beac23b3858099",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP request from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS request from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow remote SSH from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "SG for EC2 to enable SSH(22), HTTPS(443) and HTTP(80)",
            "name_prefix": "",
            "owner_id": "851725296097",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Security Groups to allow SSH(22), HTTP(80) and HTTPS(443)"
            },
            "tags_all": {
              "Name": "Security Groups to allow SSH(22), HTTP(80) and HTTPS(443)"
            },
            "timeouts": null,
            "vpc_id": "vpc-095771e7a45140bc6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.project_vpc_us_west_2"
          ]
        }
      ]
    }
  ]
}